--- a/ci/Makefile
+++ b/ci/Makefile
@@ -82,200 +82,52 @@ DISTROS = alpine archlinux centos debian fedora opensuse ubuntu
 # $< first prerequist
 # $@ target name
 
-## ENV ##
-# Build the env image.
-targets = $(addsuffix _env, $(DISTROS))
-.PHONY: env $(targets)
-env: $(targets)
-$(targets): %_env: docker/%/Dockerfile
-	#@docker image rm -f ${IMAGE}:$*_env 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=env --tag ${IMAGE}:$*_env -f $< ..
+STAGES = env devel build test install_devel install_build install_test
+define make-stage-target
+$(info STAGE: $1)
+$(info Create targets: $1 $(addsuffix _$1, $(DISTROS)).)
+targets_$1 = $(addsuffix _$1, $(DISTROS))
+.PHONY: $1 $(targets_$1)
+$1: $$(targets_$1)
+$$(targets_$1): %_$1: docker/%/Dockerfile
+	#@docker image rm -f ${IMAGE}:$$*_$1 2>/dev/null
+	${DOCKER_BUILD_CMD} --target=$1 --tag ${IMAGE}:$$*_$1 -f $$< ..
 
-# Save the env image (debug).
-targets = $(addprefix save_, $(addsuffix _env, $(DISTROS)))
-.PHONY: save_env $(targets)
-save_env: $(targets)
-$(targets): save_%_env: cache/%/docker_env.tar
-cache/%/docker_env.tar: %_env
-	@rm -f $@
-	mkdir -p cache/$*
-	docker save ${IMAGE}:$*_env -o $@
+$(info Create targets: save_$1 $(addprefix save_, $(addsuffix _$1, $(DISTROS))) (debug).)
+save_targets_$1 = $(addprefix save_, $(addsuffix _$1, $(DISTROS)))
+.PHONY: save_$1 $(save_targets_$1)
+save_$1: $$(save_targets_$1)
+$$(save_targets_$1): save_%_$1: cache/%/docker_$1.tar
+cache/%/docker_$1.tar: %_$1
+	@rm -f $$@
+	mkdir -p cache/$$*
+	docker save ${IMAGE}:$$*_$1 -o $$@
 
-# Run a container using the env image (debug).
-targets = $(addprefix sh_, $(addsuffix _env, $(DISTROS)))
-.PHONY: $(targets)
-$(targets): sh_%_env: %_env
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$*_env ${IMAGE}:$*_env /bin/sh
+$(info Create targets: $(addprefix sh_, $(addsuffix _$1, $(DISTROS))) (debug).)
+sh_targets_$1 = $(addprefix sh_, $(addsuffix _$1, $(DISTROS)))
+.PHONY: $(sh_targets_$1)
+$$(sh_targets_$1): sh_%_$1: %_$1
+	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$$*_$1 ${IMAGE}:$$*_$1 /bin/sh
 
+$(info Create targets: $(addprefix clean_, $(addsuffix _$1, $(DISTROS))).)
+clean_targets_$1 = $(addprefix clean_, $(addsuffix _$1, $(DISTROS)))
+.PHONY: clean_$1 $(clean_targets_$1)
+clean_$1: $$(clean_targets_$1)
+$$(clean_targets_$1): clean_%_$1:
+	docker image rm -f ${IMAGE}:$$*_$1 2>/dev/null
+	rm -f cache/$$*/docker_$1.tar
+endef
 
-## DEVEL ##
-# Build the devel image.
-targets = $(addsuffix _devel, $(DISTROS))
-.PHONY: devel $(targets)
-devel: $(targets)
-$(targets): %_devel: docker/%/Dockerfile
-	#@docker image rm -f ${IMAGE}:$*_devel 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=devel --tag ${IMAGE}:$*_devel -f $< ..
-
-# Save the devel image (debug).
-targets = $(addprefix save_, $(addsuffix _devel, $(DISTROS)))
-.PHONY: save_devel $(targets)
-save_devel: $(targets)
-$(targets): save_%_devel: cache/%/docker_devel.tar
-cache/%/docker_devel.tar: %_devel
-	@rm -f $@
-	mkdir -p cache/$*
-	docker save ${IMAGE}:$*_devel -o $@
-
-# Run a container using the devel image (debug).
-targets = $(addprefix sh_, $(addsuffix _devel, $(DISTROS)))
-.PHONY: $(targets)
-$(targets): sh_%_devel: %_devel
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$*_devel ${IMAGE}:$*_devel /bin/sh
-
-
-## BUILD ##
-# Build the build image.
-targets = $(addsuffix _build, $(DISTROS))
-.PHONY: build $(targets)
-build: $(targets)
-$(targets): %_build: docker/%/Dockerfile
-	#@docker image rm -f ${IMAGE}:$*_build 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=build --tag ${IMAGE}:$*_build -f $< ..
-
-# Save the build image (debug).
-targets = $(addprefix save_, $(addsuffix _build, $(DISTROS)))
-.PHONY: save_build $(targets)
-save_build: $(targets)
-$(targets): save_%_build: cache/%/docker_build.tar
-cache/%/docker_build.tar: %_build
-	@rm -f $@
-	mkdir -p cache/$*
-	docker save ${IMAGE}:$*_build -o $@
-
-# Run a container using the build image (debug).
-targets = $(addprefix sh_, $(addsuffix _build, $(DISTROS)))
-.PHONY: $(targets)
-$(targets): sh_%_build: %_build
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$*_build ${IMAGE}:$*_build /bin/sh
-
-
-## TEST ##
-# Build the test image.
-targets = $(addsuffix _test, $(DISTROS))
-.PHONY: test $(targets)
-test: $(targets)
-$(targets): %_test: docker/%/Dockerfile
-	#@docker image rm -f ${IMAGE}:$*_test 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=test --tag ${IMAGE}:$*_test -f $< ..
-
-# Save the test image (debug).
-targets = $(addprefix save_, $(addsuffix _test, $(DISTROS)))
-.PHONY: save_test $(targets)
-save_test: $(targets)
-$(targets): save_%_test: cache/%/docker_test.tar
-cache/%/docker_test.tar: %_test
-	@rm -f $@
-	mkdir -p cache/$*
-	docker save ${IMAGE}:$*_test -o $@
-
-# Run a container using the test image (debug).
-targets = $(addprefix sh_, $(addsuffix _test, $(DISTROS)))
-.PHONY: $(targets)
-$(targets): sh_%_test: %_test
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$*_test ${IMAGE}:$*_test /bin/sh
-
-
-## INSTALL_DEVEL ##
-# Build the install_devel image.
-targets = $(addsuffix _install_devel, $(DISTROS))
-.PHONY: install_devel $(targets)
-install_devel: $(targets)
-$(targets): %_install_devel: docker/%/Dockerfile
-	#@docker image rm -f ${IMAGE}:$*_install_devel 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=install_devel --tag ${IMAGE}:$*_install_devel -f $< ..
-
-# Save the install_devel image (debug).
-targets = $(addprefix save_, $(addsuffix _install_devel, $(DISTROS)))
-.PHONY: save_install_devel $(targets)
-save_install_devel: $(targets)
-$(targets): save_%_install_devel: cache/%/docker_install_devel.tar
-cache/%/docker_install_devel.tar: %_install_devel
-	@rm -f $@
-	mkdir -p cache/$*
-	docker save ${IMAGE}:$*_install_devel -o $@
-
-# Run a container using the install_devel image (debug).
-targets = $(addprefix sh_, $(addsuffix _install_devel, $(DISTROS)))
-.PHONY: $(targets)
-$(targets): sh_%_install_devel: %_install_devel
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$*_install_devel ${IMAGE}:$*_install_devel /bin/sh
-
-
-## INSTALL_BUILD ##
-# Build the install_build image.
-targets = $(addsuffix _install_build, $(DISTROS))
-.PHONY: install_build $(targets)
-install_build: $(targets)
-$(targets): %_install_build: docker/%/Dockerfile
-	#@docker image rm -f ${IMAGE}:$*_install_build 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=install_build --tag ${IMAGE}:$*_install_build -f $< ..
-
-# Save the install_build image (debug).
-targets = $(addprefix save_, $(addsuffix _install_build, $(DISTROS)))
-.PHONY: save_install_build $(targets)
-save_install_build: $(targets)
-$(targets): save_%_install_build: cache/%/docker_install_build.tar
-cache/%/docker_install_build.tar: %_install_build
-	@rm -f $@
-	mkdir -p cache/$*
-	docker save ${IMAGE}:$*_install_build -o $@
-
-# Run a container using the install_build image (debug).
-targets = $(addprefix sh_, $(addsuffix _install_build, $(DISTROS)))
-.PHONY: $(targets)
-$(targets): sh_%_install_build: %_install_build
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$*_install_build ${IMAGE}:$*_install_build /bin/sh
-
-
-## INSTALL_TEST ##
-# Build the install_test image.
-targets = $(addsuffix _install_test, $(DISTROS))
-.PHONY: install_test $(targets)
-install_test: $(targets)
-$(targets): %_install_test: docker/%/Dockerfile
-	#@docker image rm -f ${IMAGE}:$*_install_test 2>/dev/null
-	${DOCKER_BUILD_CMD} --target=install_test --tag ${IMAGE}:$*_install_test -f $< ..
-
-# Save the install_test image (debug).
-targets = $(addprefix save_, $(addsuffix _install_test, $(DISTROS)))
-.PHONY: save_install_test $(targets)
-save_install_test: $(targets)
-$(targets): save_%_install_test: cache/%/docker_install_test.tar
-cache/%/docker_install_test.tar: %_install_test
-	@rm -f $@
-	mkdir -p cache/$*
-	docker save ${IMAGE}:$*_install_test -o $@
-
-# Run a container using the install_test image (debug).
-targets = $(addprefix sh_, $(addsuffix _install_test, $(DISTROS)))
-.PHONY: $(targets)
-$(targets): sh_%_install_test: %_install_test
-	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$*_install_test ${IMAGE}:$*_install_test /bin/sh
-
+$(foreach stage,$(STAGES),$(eval $(call make-stage-target,$(stage))))
 
 ## CLEAN ##
-targets = $(addprefix clean_, $(DISTROS))
-.PHONY: clean $(targets)
-clean: $(targets)
-	-rmdir cache
-$(targets): clean_%:
+clean_targets = $(addprefix clean_, $(DISTROS))
+.PHONY: clean $(clean_targets)
+clean: $(clean_targets)
 	docker container prune -f
 	docker image prune -f
-	-for s in install_test install_build install_devel test build devel env; do \
- docker image rm -f ${IMAGE}:$*_$$s 2>/dev/null; \
- rm -f cache/$*/docker_$$s.tar; \
- done
+	-rmdir cache
+$(clean_targets): clean_%: $(addprefix clean_%_, $(STAGES))
 	-rmdir cache/$*
 
 .PHONY: distclean
