ci: comment debug log

--- a/ci/Makefile
+++ b/ci/Makefile
@@ -85,8 +85,8 @@ DISTROS = alpine archlinux centos debian fedora opensuse ubuntu
 
 STAGES = env devel build test install_env install_devel install_build install_test
 define make-stage-target
-$(info STAGE: $1)
-$(info Create targets: $1 $(addsuffix _$1, $(DISTROS)).)
+#$$(info STAGE: $1)
+#$$(info Create targets: $1 $(addsuffix _$1, $(DISTROS)).)
 targets_$1 = $(addsuffix _$1, $(DISTROS))
 .PHONY: $1 $(targets_$1)
 $1: $$(targets_$1)
@@ -94,7 +94,7 @@ $$(targets_$1): %_$1: docker/%/Dockerfile
 	#@docker image rm -f ${IMAGE}:$$*_$1 2>/dev/null
 	${DOCKER_BUILD_CMD} --target=$1 --tag ${IMAGE}:$$*_$1 -f $$< ..
 
-$(info Create targets: save_$1 $(addprefix save_, $(addsuffix _$1, $(DISTROS))) (debug).)
+#$$(info Create targets: save_$1 $(addprefix save_, $(addsuffix _$1, $(DISTROS))) (debug).)
 save_targets_$1 = $(addprefix save_, $(addsuffix _$1, $(DISTROS)))
 .PHONY: save_$1 $(save_targets_$1)
 save_$1: $$(save_targets_$1)
@@ -104,13 +104,13 @@ cache/%/docker_$1.tar: %_$1
 	mkdir -p cache/$$*
 	docker save ${IMAGE}:$$*_$1 -o $$@
 
-$(info Create targets: $(addprefix sh_, $(addsuffix _$1, $(DISTROS))) (debug).)
+#$$(info Create targets: $(addprefix sh_, $(addsuffix _$1, $(DISTROS))) (debug).)
 sh_targets_$1 = $(addprefix sh_, $(addsuffix _$1, $(DISTROS)))
 .PHONY: $(sh_targets_$1)
 $$(sh_targets_$1): sh_%_$1: %_$1
 	${DOCKER_RUN_CMD} -it --name ${IMAGE}_$$*_$1 ${IMAGE}:$$*_$1 /bin/sh
 
-$(info Create targets: $(addprefix clean_, $(addsuffix _$1, $(DISTROS))).)
+#$$(info Create targets: $(addprefix clean_, $(addsuffix _$1, $(DISTROS))).)
 clean_targets_$1 = $(addprefix clean_, $(addsuffix _$1, $(DISTROS)))
 .PHONY: clean_$1 $(clean_targets_$1)
 clean_$1: $$(clean_targets_$1)
