ci: disable fail-fast for Docker workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         distro: [alpine, archlinux, centos, debian, fedora, opensuse, ubuntu]
+      fail-fast: false
     env:
       DISTRO: ${{ matrix.distro }}
     steps:
