ci: Add FreeBSD using vagrant

--- a/ci/Makefile
+++ b/ci/Makefile
@@ -43,8 +43,14 @@ help:
 	@echo -e "\t\t${BOLD}ubuntu${RESET} (rolling)"
 	@echo -e "\te.g. 'make ubuntu_test'"
 	@echo
+	@echo -e "\t${BOLD}<VM>${RESET}: build the vagrant <VM> virtual machine."
+	@echo
+	@echo -e "\t${BOLD}<VM>${RESET}:"
+	@echo -e "\t\t${BOLD}freebsd${RESET} (FreeBSD)"
+	@echo
 	@echo -e "\t${BOLD}clean${RESET}: Remove cache and ALL docker images."
 	@echo -e "\t${BOLD}clean_<distro>${RESET}: Remove cache and docker images for the specified distro."
+	@echo -e "\t${BOLD}clean_<vm>${RESET}: Remove virtual machine for the specified vm."
 	@echo
 	@echo -e "\t${BOLD}NOCACHE=1${RESET}: use 'docker build --no-cache' when building container (default use cache)."
 	@echo
@@ -122,15 +128,26 @@ endef
 
 $(foreach stage,$(STAGES),$(eval $(call make-stage-target,$(stage))))
 
+# Currently supported virtual machine
+VMS = freebsd
+
+$(VMS): %: vagrant/%/Vagrantfile
+	@cd vagrant/$* && vagrant destroy -f
+	cd vagrant/$* && vagrant up
+
 ## CLEAN ##
 clean_targets = $(addprefix clean_, $(DISTROS))
+clean_vms = $(addprefix clean_, $(VMS))
 .PHONY: clean $(clean_targets)
-clean: $(clean_targets)
+clean: $(clean_targets) $(clean_vms)
 	docker container prune -f
 	docker image prune -f
 	-rmdir cache
 $(clean_targets): clean_%: $(addprefix clean_%_, $(STAGES))
 	-rmdir cache/$*
+$(clean_vms): clean_%:
+	cd vagrant/$* && vagrant destroy -f
+	-rm -rf vagrant/$*/.vagrant
 
 .PHONY: distclean
 distclean: clean
