--- a/.github/workflows/vagrant.yml
+++ b/.github/workflows/vagrant.yml
@@ -1,6 +1,11 @@
 name: Vagrant
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    # min hours day(month) month day(week)
+    - cron: '0 0 7,22 * *'
 
 jobs:
   # Only macos runner provide virtualisation with vagrant/virtualbox installed.
