--- a/ci/docker/ubuntu/Dockerfile
+++ b/ci/docker/ubuntu/Dockerfile
@@ -23,8 +23,8 @@ COPY . .
 FROM devel AS build
 RUN cmake -version
 RUN cmake -S. -Bbuild
-RUN cmake --build build --target all
-RUN cmake --build build --target install
+RUN cmake --build build --target all -v
+RUN cmake --build build --target install -v
 
 FROM build AS test
 RUN cmake --build build --target test
